# devices_stats

./: CMakeLists.txt  README.md  class.iuml  plantuml  sequence.plantuml
include/: Message.h  Node.h  Server.h  Storage.h  Validator.h
src/: Node.cpp  Server.cpp  main.cpp
test/: client.sh
